@@ -86,6 +86,7 @@
 (require 'nnmail)
 (require 'easymenu)
 (require 'registry)
+(require 'gmm-utils)
 
 (defvar gnus-adaptive-word-syntax-table)
 
@@ -982,7 +983,7 @@ only the last one's marks are returned."
   (let* ((article (last articles))
          (id (gnus-registry-fetch-message-id-fast article))
          (marks (when id (gnus-registry-get-id-key id 'mark))))
-    (when (interactive-p)
+    (when (gmm-called-interactively-p 'interactive)
       (gnus-message 1 "Marks are %S" marks))
     marks))
 
